<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.xujiaji.erupt</groupId>
    <artifactId>erupt</artifactId>
    <version>1.12.17</version>

    <packaging>pom</packaging>
    <name>erupt</name>
    <description>erupt common data framework pom parent</description>
    <url>https://www.erupt.xyz</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <erupt.groupId>com.github.xujiaji.erupt</erupt.groupId>
        <java.version>1.8</java.version>
        <spring.boot.version>2.7.18</spring.boot.version>
    </properties>

    <!--
    在编译spring boot 等多模块项目的时候，往往出现
    Non-resolvable parent POM: Could not find artifact
    后面跟一串其它信息，网上大部分解决方案是修改relativePath配置项，
    其实这是很不优雅的方式。这里介绍另一种解决方案。
    解决办法如下，把父项目的modules里面的配置全部注释或者删除，
    让后编译并打包并安装，在提示成功后，再把原来注释活删除的配置项还原即可，然后再编译即可成功。
    -->
    <modules>
        <module>erupt-annotation</module>
        <module>erupt-core</module>
        <module>erupt-excel</module>
        <module>erupt-toolkit</module>

        <module>erupt-data/erupt-jpa</module><!-- Hibernate JPA 数据实现 -->
        <module>erupt-data/erupt-mongodb</module><!-- MongoDB 数据实现 -->

        <module>erupt-upms</module><!--用户权限管理-->
        <module>erupt-security</module><!--API 接口安全-->
<!--        <module>erupt-admin</module>-->
        <module>erupt-web</module><!--前端代码-->

        <module>erupt-tpl</module>
        <module>erupt-tpl-ui/ant-design</module>
        <module>erupt-tpl-ui/element-ui</module>
        <module>erupt-tpl-ui/amis</module>
        <module>erupt-tpl-ui/element-plus</module>

        <module>erupt-extra/erupt-job</module><!--任务调度-->
        <module>erupt-extra/erupt-generator</module><!--代码生成-->
        <module>erupt-extra/erupt-monitor</module><!--服务监控-->
        <module>erupt-extra/erupt-magic-api</module><!-- magic-api 接口配置 -->
        <module>erupt-extra/erupt-flow</module><!--流程服务-->
        <!-- erupt cloud -->
        <module>erupt-cloud/erupt-cloud-common</module>
        <module>erupt-cloud/erupt-cloud-server</module> <!-- 主服务节点 -->
        <module>erupt-cloud/erupt-cloud-node</module> <!-- 云node节点 -->
<!--        <module>erupt-cloud/erupt-cloud-node-jpa</module>  &lt;!&ndash; 云node节点（聚合jpa） &ndash;&gt;-->

    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <name>Central Repository OSSRH</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>utf-8</encoding>
                    <verbose>true</verbose>
                    <fork>true</fork>
                    <compilerArgs>
                        <compilerArg>-parameters</compilerArg>
                    </compilerArgs>
                    <!--<executable>/Library/Java/JavaVirtualMachines/jdk1.8.0_231.jdk/Contents/Home/bin/javac</executable>-->
                </configuration>
            </plugin>
            <!-- 一键更新子模块版本号 plugins -> versions -> version:set  -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>
            <!--SCM插件-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-scm-plugin</artifactId>
                <version>1.8.1</version>
            </plugin>

            <!-- 打包时跳过测试 -->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-surefire-plugin</artifactId>-->
<!--                <version>2.18.1</version>-->
<!--                <configuration>-->
<!--                    <skipTests>true</skipTests>-->
<!--                </configuration>-->
<!--            </plugin>-->

            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.4.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>ossrh</publishingServerId>
                    <tokenAuth>true</tokenAuth>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.5</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <!-- Prevent `gpg` from using pinentry programs -->
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                    <additionalJOptions>
                        <additionalJOption>-Xdoclint:none</additionalJOption>
                    </additionalJOptions>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadoc</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--revision上传到maven后依赖问题-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
<!--                        <phase>process-resources</phase>-->

                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <tag>master</tag>
        <url>git@github.com:erupts/erupt.git</url>
        <connection>scm:git:git@github.com:erupts/erupt.git</connection>
        <developerConnection>scm:git:git@github.com:erupts/erupt.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <name>xujiaji</name>
            <email>jiajixu@qq.com</email>
            <roles>
                <role>owner</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>

</project>

